--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "spotify-preview-finder": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
