BTS - bug fixes, re arranged order of guesses

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,18 +7,23 @@ RUN apt-get update && apt-get install -y \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
-# Kopiere Requirements und installiere Python-Dependencies
+# Kopiere requirements und installiere Python-Dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Kopiere Backend-Code
-COPY app.py .
+# Kopiere App-Code
+COPY . .
 
-# Erstelle Upload-Ordner
-RUN mkdir -p uploads/songs
+# Erstelle notwendige Verzeichnisse mit korrekten Berechtigungen
+RUN mkdir -p /app/data /app/uploads && \
+    chmod -R 777 /app/data /app/uploads
+
+# Kopiere Entrypoint-Skript
+COPY docker-entrypoint.sh /app/
+RUN chmod +x /app/docker-entrypoint.sh
 
 # Exponiere Port
 EXPOSE 5000
 
-# Starte die Anwendung
-CMD ["python", "app.py"]
+# Starte die App über Entrypoint
+ENTRYPOINT ["/app/docker-entrypoint.sh"]
