--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,39 +2,30 @@ version: '3.8'
 
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ./backend
     container_name: spordle-backend
-    volumes:
-      - ./backend/uploads:/app/uploads
-      - ./backend/data:/app/data
-    environment:
-      - FLASK_ENV=production
-      - DATABASE_URL=sqlite:////app/data/spordle.db
-    networks:
-      - spordle-network
-    restart: unless-stopped
     ports:
       - "5000:5000"
+    volumes:
+      - ./backend/data:/app/data
+      - ./backend/uploads:/app/uploads
+    environment:
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1
+      - DATABASE_URL=sqlite:////app/data/spordle.db
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    build: ./frontend
     container_name: spordle-frontend
     ports:
       - "3000:80"
     depends_on:
       - backend
-    networks:
-      - spordle-network
-    restart: unless-stopped
-
-networks:
-  spordle-network:
-    driver: bridge
-
-volumes:
-  spordle-data:
-  spordle-uploads:
+    environment:
+      - REACT_APP_API_URL=http://localhost:5000/api
