--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine as build
 
 WORKDIR /app
 
-# Kopiere package.json und package-lock.json (falls vorhanden)
+# Kopiere package.json und package-lock.json
 COPY package*.json ./
 
 # Installiere Dependencies
@@ -21,10 +21,8 @@ FROM nginx:alpine
 # Kopiere die gebaute App
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Kopiere nginx Konfiguration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Exponiere Port
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
