try to optimize backend comfort, big big WIP.... nothing works lol

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     curl \
     ffmpeg \
+    eyed3 \
     && rm -rf /var/lib/apt/lists/*
 
 # Kopiere requirements und installiere Python dependencies
